--- a/Gilbert/src/main/resources/static/main.css
+++ b/Gilbert/src/main/resources/static/main.css
@@ -52,3 +52,43 @@ html, body {
         height: 100%;
     }
 }
+
+.auth-body {
+    width: 100%;
+    height: 100vh;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    & .auth-container {
+        width: 490px;
+        height: 600px;
+        max-height: 90%;
+        display: flex;
+        flex-direction: column;
+        padding: 3rem;
+    }
+
+    & form {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+
+        gap: 1.2rem;
+
+        & label {
+            display: flex;
+            flex-direction: column;
+        }
+
+        & label input {
+            width: 100%;
+        }
+
+        & label span {
+            margin: 0;
+            font-size: 0.7rem;
+        }
+    }
+}
