Profile page is beginning to take shape

--- a/Gilbert/src/main/resources/templates/auth/layout.html
+++ b/Gilbert/src/main/resources/templates/auth/layout.html
@@ -5,6 +5,7 @@
 </head>
 <body>
 <section layout:fragment="content">
+    <header th:replace="~{/fragments/header :: header}"></header>
     <div class="auth-body">
         <div class="auth-container">
             <section layout:fragment="auth-content"></section>
