--- a/Gilbert/src/main/resources/templates/home/index.html
+++ b/Gilbert/src/main/resources/templates/home/index.html
@@ -5,7 +5,9 @@
 </head>
 <body>
 <section layout:fragment="content">
+    <header th:replace="~{/fragments/header :: header}"></header>
     <h1>Welcome</h1>
+    <footer th:replace="~{/fragments/footer :: footer}"></footer>
 </section>
 </body>
 </html>
