--- a/Gilbert/src/main/resources/static/main.css
+++ b/Gilbert/src/main/resources/static/main.css
@@ -106,6 +106,38 @@ html, body {
                 margin: 0;
             }
         }
-
     }
+}
+
+.profile-header {
+    display: flex;
+    flex-direction: row;
+
+    height: 8rem;
+    width: 100%;
+
+    padding: 1rem;
+
+    & .profile-picture, .profile-picture img {
+        height: 100%;
+        aspect-ratio: 1;
+        border-radius: 500px;
+    }
+
+    & .profile-display-name {
+        font-size: 1.3rem;
+        margin: 0;
+    }
+
+    & .profile-username {
+        font-size: 0.7rem;
+    }
+}
+
+& .profile-menu nav {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+
+    width: 100%;
 }
