Began some design for the entire page

--- a/Gilbert/src/main/resources/templates/fragments/navigation.html
+++ b/Gilbert/src/main/resources/templates/fragments/navigation.html
@@ -3,19 +3,29 @@
 <body>
 <nav th:fragment="navigation" class="app-navigation">
     <a class="home" href="/">
-        <img src="/images/icons/home.svg" th:alt="#{navigation.homeAlt}">
+        <svg viewBox="0 0 24 24">
+            <use href="#homeIcon" />
+        </svg>
     </a>
     <a class="search" href="/search">
-        <img src="/images/icons/search.svg" th:alt="#{navigation.searchAlt}">
+        <svg viewBox="0 0 24 24">
+            <use href="#searchIcon" />
+        </svg>
     </a>
     <a class="favorites" href="/me/favorites">
-        <img src="/images/icons/favorites.svg" th:alt="#{navigation.favoritesAlt}">
-    </a>
-    <a class="profile" href="/me">
-        <img src="/images/icons/profile.svg" th:alt="#{navigation.profileAlt}">
+        <svg viewBox="0 0 24 24">
+            <use href="#favoriteIcon" />
+        </svg>
     </a>
     <a class="notifications" href="/me/notifications">
-        <img src="/images/icons/bell.svg" th:alt="#{navigation.notificationsAlt}">
+        <svg viewBox="0 0 24 24">
+            <use href="#notificationsIcon" />
+        </svg>
+    </a>
+    <a class="profile" href="/me">
+        <svg viewBox="0 0 24 24">
+            <use href="#profileIcon" />
+        </svg>
     </a>
 </nav>
 </body>
