--- a/Gilbert/src/main/resources/static/main.css
+++ b/Gilbert/src/main/resources/static/main.css
@@ -2,12 +2,40 @@
     --header-height: 60px;
     --navigation-height: 60px;
 
+    --primary: #004224;
+    --secondary: #423a2b;
+
+    --background: var(--primary);
+
+    --text: #f8f0f5;
+
     box-sizing: border-box;
 }
 
 html, body {
     margin: 0;
     padding: 0;
+}
+
+body {
+    background-color: var(--background);
+    color: var(--text);
+}
+
+.outlinedIcon {
+    fill: none;
+    stroke: currentColor;
+    stroke-width: 2;
+    stroke-linecap: round;
+    stroke-linejoin: round;
+}
+
+.filledIcon {
+    fill: currentColor;
+    stroke: none;
+    stroke-width: 2;
+    stroke-linecap: round;
+    stroke-linejoin: round;
 }
 
 .app-header {
@@ -46,10 +74,14 @@ html, body {
         display: flex;
         justify-content: center;
         align-items: center;
+
+        color: var(--text);
     }
 
-    & a img {
+    & a img, a svg {
         height: 100%;
+        width: 40px;
+        aspect-ratio: 1;
     }
 }
 
