--- a/Gilbert/src/main/resources/templates/layout.html
+++ b/Gilbert/src/main/resources/templates/layout.html
@@ -9,6 +9,7 @@
 </head>
 <body>
 <nav th:replace="~{/fragments/navigation :: navigation}"></nav>
+<svg th:replace="~{/fragments/icons :: icons}"></svg>
 <section layout:fragment="content"></section>
 </body>
 </html>
