Moved me endpoint to profile

--- a/Gilbert/src/main/resources/templates/fragments/navigation.html
+++ b/Gilbert/src/main/resources/templates/fragments/navigation.html
@@ -12,17 +12,17 @@
             <use href="#searchIcon" />
         </svg>
     </a>
-    <a class="favorites" href="/me/favorites">
+    <a class="favorites" href="/profile/me/favorites">
         <svg viewBox="0 0 24 24">
             <use href="#favoriteIcon" />
         </svg>
     </a>
-    <a class="notifications" href="/me/notifications">
+    <a class="notifications" href="/profile/me/notifications">
         <svg viewBox="0 0 24 24">
             <use href="#notificationsIcon" />
         </svg>
     </a>
-    <a class="profile" href="/me">
+    <a class="profile" href="/profile/me">
         <svg viewBox="0 0 24 24">
             <use href="#profileIcon" />
         </svg>
