--- a/Gilbert/src/main/resources/static/main.css
+++ b/Gilbert/src/main/resources/static/main.css
@@ -65,6 +65,8 @@ body {
     display: flex;
     flex-direction: row;
 
+    box-shadow: 0 -5px 14px 2px #00000055;
+
     & a {
         height: 100%;
         width: 100%;
@@ -140,6 +142,38 @@ body {
     }
 }
 
+.profile-column {
+    & .navigation {
+        height: 3.3rem;
+        width: 100%;
+
+        & nav {
+            display: flex;
+            flex-direction: row;
+            justify-content: end;
+            gap: 0.5rem;
+
+            padding: 0.5rem;
+
+            height: 100%;
+            width: 100%;
+        }
+        
+        & a {
+            text-decoration: none;
+            height: 100%;
+            color: var(--text);
+
+            padding: 0.3rem;
+        }
+
+        & a svg {
+            height: 100%;
+            aspect-ratio: 1;
+        }
+    }
+}
+
 .profile-header {
     display: flex;
     flex-direction: row;
@@ -170,5 +204,22 @@ body {
     flex-direction: row;
     justify-content: space-around;
 
+    height: 3rem;
     width: 100%;
+
+    background-color: var(--secondary);
+
+    box-shadow: 0 3px 8px 0 #00000055;
+
+    & a {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        width: 100%;
+        height: 100%;
+
+        color: var(--text);
+        text-decoration: none;
+    }
 }
