create post works and can view details of post. Now working on display of it and edit/delete functions

--- a/Gilbert/src/main/resources/templates/post/all.html
+++ b/Gilbert/src/main/resources/templates/post/all.html
@@ -157,7 +157,7 @@
 
                 <div class="post-details">
                     <span th:text="${post.size}">Size</span>
-                    <span th:text="${post.brand}">Brand</span>
+                    <span th:text="${post.brand != null ? post.brand.name : ''}">Brand</span>
                     <span class="post-condition" th:text="${post.condition}">Condition</span>
                 </div>
             </div>
