--- a/Gilbert/src/main/resources/templates/post/details.html
+++ b/Gilbert/src/main/resources/templates/post/details.html
@@ -26,6 +26,7 @@
         <div class="info-section">
             <p class="price" th:text="${'€' + #numbers.formatDecimal(post.price, 1, 2)}">€0.00</p>
             <p class="description" th:text="${post.description}">Description</p>
+            <p class="seller-info">Seller: <span th:text="${post.ownerDisplayName}">Owner Name</span></p>
             <p>Size: <span th:text="${post.size}">Size</span></p>
             <p>Brand: <span th:text="${post.brand != null ? post.brand.name : ''}">Brand</span></p>
             <p>Condition: <span th:text="${post.condition}">Condition</span></p>
