Profile settings ui has begun

--- a/Gilbert/src/main/resources/templates/layout.html
+++ b/Gilbert/src/main/resources/templates/layout.html
@@ -11,5 +11,6 @@
 <nav th:replace="~{/fragments/navigation :: navigation}"></nav>
 <svg th:replace="~{/fragments/icons :: icons}"></svg>
 <section layout:fragment="content"></section>
+<div style="height: 150px;"></div>
 </body>
 </html>
