--- a/Gilbert/src/main/resources/static/main.css
+++ b/Gilbert/src/main/resources/static/main.css
@@ -22,20 +22,32 @@ body {
     color: var(--text);
 }
 
-.outlinedIcon {
-    fill: none;
-    stroke: currentColor;
-    stroke-width: 2;
-    stroke-linecap: round;
-    stroke-linejoin: round;
+button {
+    border-radius: 0;
+    border: none;
+    height: 2.5rem;
 }
 
-.filledIcon {
-    fill: currentColor;
-    stroke: none;
+input {
+    border-radius: 0;
+    border: none;
+    height: 2rem;
+}
+
+.icon {
     stroke-width: 2;
     stroke-linecap: round;
     stroke-linejoin: round;
+
+    &.outlined {
+        fill: none;
+        stroke: currentColor;
+    }
+
+    &.filled {
+        fill: currentColor;
+        stroke: none;
+    }
 }
 
 .app-header {
@@ -65,6 +77,7 @@ body {
     display: flex;
     flex-direction: row;
 
+    background-color: var(--primary);
     box-shadow: 0 -5px 14px 2px #00000055;
 
     & a {
@@ -88,19 +101,24 @@ body {
 
 .auth-body {
     width: 100%;
-    height: 100vh;
 
     display: flex;
     justify-content: center;
     align-items: center;
 
+    & h1 {
+        margin: 0 0 1rem;
+    }
+
     & .auth-container {
         width: 490px;
-        height: 600px;
         max-height: 90%;
         display: flex;
         flex-direction: column;
         padding: 3rem;
+        margin: 1rem;
+
+        background-color: var(--secondary);
     }
 
     & form {
@@ -178,12 +196,14 @@ body {
     display: flex;
     flex-direction: row;
 
-    height: 8rem;
+    height: 6rem;
     width: 100%;
 
-    padding: 1rem;
+    gap: 1rem;
 
-    & .profile-picture, .profile-picture img {
+    padding: 0.3rem 1rem 1rem 1rem;
+
+    & .profile-picture, .profile-picture img, .profile-picture svg {
         height: 100%;
         aspect-ratio: 1;
         border-radius: 500px;
@@ -224,4 +244,101 @@ body {
     }
 
 
+}
+
+.settings-nav {
+    width: 100%;
+
+    & a {
+        text-decoration: none;
+        color: var(--text);
+
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+    }
+
+    & svg {
+        height: 100%;
+        width: 32px;
+    }
+}
+
+.settings-column {
+    display: flex;
+    flex-direction: column;
+
+    padding-top: 1rem;
+
+    & h2 {
+        margin: 0 0 0 1rem;
+        font-size: 1rem;
+    }
+
+    & .settings-category-group {
+        display: flex;
+        flex-direction: column;
+
+        background-color: var(--secondary);
+
+        margin: 0 1rem 1rem 1rem;
+    }
+
+    & .setting-category {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+
+        width: 100%;
+        gap: 1rem;
+
+        padding: 1rem;
+        text-decoration: none;
+        color: var(--text);
+
+        & svg {
+            width: 2rem;
+            height: 100%;
+        }
+    }
+
+    & .settings-group {
+        display: flex;
+        flex-direction: column;
+        margin: 0 1rem 1rem 1rem;
+        background-color: var(--secondary);
+        padding: 1rem;
+    }
+
+    & form {
+        display: flex;
+        flex-direction: column;
+
+        & input {
+            margin-bottom: 0.8rem;
+        }
+    }
+
+    & .button-group {
+        display: flex;
+        flex-direction: row;
+        gap: 1rem;
+
+        & button {
+            width: 100%;
+        }
+    }
+}
+
+.pfp-selector {
+    height: 3rem;
+
+    display: flex;
+    flex-direction: row;
+    gap: 1rem;
+
+    & svg, img {
+        height: 100%;
+        aspect-ratio: 1;
+    }
 }
