fixed spacing issue on create button in create post

--- a/Gilbert/src/main/resources/templates/post/all.html
+++ b/Gilbert/src/main/resources/templates/post/all.html
@@ -180,7 +180,7 @@
     </div>
 </div>
 
-
+<div style="height: 150px;"></div>
 <div th:replace="~{fragments/footer :: footer}"></div>
 </body>
 </html>
