--- a/Gilbert/src/main/resources/templates/post/create.html
+++ b/Gilbert/src/main/resources/templates/post/create.html
@@ -137,7 +137,7 @@
         <button type="submit" class="submit-button">Create Post</button>
     </form>
 </div>
-
+<div style="height: 150px;"></div>
 <div th:replace="~{fragments/footer :: footer}"></div>
 </body>
 </html>
